--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
-CMEMCD = "${CMEMCD}"
-CMEMPWD = "{$CMEMPWD}"
-CUSRID = "${CUSRID}"
-CUSRPWD = "{$CUSRPWD}"
+CUSRPWD=${CUSRPWD}
+CMEMCD=${CMEMCD}
+CMEMPWD=${CMEMPWD}
+CUSRID=${CUSRID}
+
 
